# unit-testing-sql

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
dbt_dev/: dbt_project.yml
dbt_dev/docs/: dbt-setup.md
dbt_dev/models/: hello_world.sql  orders.sql  pivot_and_unpivot.sql  schema.yml  unit_tests.yml
nbs/: demo.ipynb  demo.md
scripts/: run.py
src/app/: format.py  transform.py
src/app/sql/: pivot.sql  pivot_and_unpivot.sql  seed_data.sql  transform.sql
tests/: conftest.py  helpers.py  test_helpers.py  test_run_script.py  test_transform.py
