[project]
name = "unit-testing-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.15",
    "dbt-postgres>=1.9.1",
    "ipykernel>=7.1.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlglot[rs]>=28.0.0",
    "sqlparse>=0.5.3",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.setuptools.package-data]
app = ["sql/*.sql"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipytest>=0.14.2",
    "nbconvert>=7.16.6",
    "pytest>=8.4.2",
]
